--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-view-shot",
+  "name": "@hrpos/react-native-view-shot",
   "version": "3.8.0",
   "description": "Capture a React Native view to an image",
   "main": "src/index.js",
@@ -12,12 +12,18 @@
     "snapshot",
     "rasterize"
   ],
-  "author": "Gaëtan Renaudeau <renaudeau.gaetan@gmail.com>",
-  "homepage": "https://github.com/gre/react-native-view-shot",
+  "author": "Marc Rousavy <marcrousavy@hotmail.com> (https://github.com/MobileBytes)",
+  "homepage": "https://github.com/MobileBytes/react-native-view-shot",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/gre/react-native-view-shot.git"
+    "url": "https://github.com/MobileBytes/react-native-view-shot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MobileBytes/react-native-view-shot/issues"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
     "html2canvas": "^1.4.1"
@@ -30,5 +36,60 @@
     "flow-bin": "^0.170.0",
     "html-webpack-plugin": "^5.5.1",
     "react-native-windows": "^0.63.16"
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: release ${version}",
+      "tagName": "v${version}"
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "release": true
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": {
+          "name": "conventionalcommits",
+          "types": [
+            {
+              "type": "feat",
+              "section": "✨ Features"
+            },
+            {
+              "type": "fix",
+              "section": "🐛 Bug Fixes"
+            },
+            {
+              "type": "perf",
+              "section": "💨 Performance Improvements"
+            },
+            {
+              "type": "chore(deps)",
+              "section": "🛠️ Dependency Upgrades"
+            },
+            {
+              "type": "docs",
+              "section": "📚 Documentation"
+            }
+          ]
+        }
+      }
+    }
+  },
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      [
+        "typescript",
+        {
+          "project": "tsconfig.json"
+        }
+      ]
+    ]
   }
 }
